--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: clojure
 lein: lein2
+before_install:
+- lein2 with-profile +travis install
 before_script:
 - lein2 version
 script: lein2 test
